@startuml
skinparam classAttributeIconSize 0

' ------------------ CarModel ---------------------
package models{
    class CarModel {
      - name: String
      - model: String
      - number: String
      - latitude: String
      - longitude: String
      - imageUrl: String
      + CarModel(name: String, model: String, number: String, latitude: String, longitude: String, imageUrl: String)
    }
}

' ------------------ CarModelFactory ---------------------
package "Utils" {
    class CarModelFactory {
      + createCarModel(name: String, model: String, number: String, photoUrl: String, lat: String, lon: String): CarModel
    }
}

' ------------------ AddCarViewModel ---------------------
package modelview{
    class AddCarViewModel {
      - isUploading: MutableLiveData<Boolean>
      - isSuccess: MutableLiveData<Boolean>
      - errorMessage: MutableLiveData<String>
      - firebaseFirestore: FirebaseFirestore
      - firebaseStorage: FirebaseStorage
      - singletonInstance: AddCarViewModel
      - carModelFactory: CarModelFactory

      + getInstance(): AddCarViewModel
      + uploadImageAndCar(imageUri: Uri, name: String, model: String, number: String, lat: String, lon: String)
      + uploadCarWithoutImage(name: String, model: String, number: String, lat: String, lon: String)
      + getFusedLocationClient(context: Context): FusedLocationProviderClient

      <<Singleton>>
      <<Observer>>
    }
}

' ------------------ AddCar_Fragment ---------------------
package "Fragments" {
    class AddCar_Fragment {
        - EditText carName
        - EditText carModel
        - EditText carNumber
        - ImageView carImageView
        - TextView carLocation
        - Switch getLocationSwitch
        - Button addCarButton
        - Uri imageUri
        - String latitude
        - String longitude
        - Bitmap bitmap
        - LocationManager locationManager
        - LocationAdapter locationAdapter
        - KProgressHUD progressHUD
        - AddCarViewModel viewModel
        --
        + onCreateView()
        + checkLocationPermission()
        + getCurrentLocation()
    }
}

' ------------------ LocationAdapter ---------------------
package "Utils" {
    class LocationAdapter {
        - FusedLocationProviderClient fusedLocationClient
        --
        + LocationAdapter(context: Context)
        + getClient() : FusedLocationProviderClient
    }
}

AddCar_Fragment ..> AddCarViewModel : uses
AddCarViewModel ..> CarModel : creates
AddCarViewModel ..> CarModelFactory : uses
AddCar_Fragment ..> LocationAdapter : uses
LocationAdapter o--> FusedLocationProviderClient : adapts

@enduml
